# plotwave

./: .gitignore  DEVELOPERS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: demo.html  index.html
docs/favicon/: site.webmanifest
examples/: __init__.py  getting_started.ipynb  progression_pred_vs_label.html  signal_helpers.py  style_transfer.html  two_progressions.html
scripts/: build_pages_demo.py
src/plotwave/: __init__.py  _core.py  _render.py
tests/: test_api.py
