[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "plotwave"
version = "0.1.0"
description = "Interactive audio and waveform plotting for notebooks and browsers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "Camil Ziane" },
]
keywords = ["audio", "waveform", "plotly", "jupyter", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/camilziane/plotwave"
Repository = "https://github.com/camilziane/plotwave"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]
notebook = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plotwave"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["plotwave"]
